<resources>
    <string name="app_name">Tutoria Contabilidad</string>

    <string name="main_tittle">Sistema de Costos</string>
    <string name="tittle_MP">Materia Prima</string>
    <string name="tittle_MO">Mano de obra</string>
    <string name="tittle_CI">Costos Indirectos</string>
    <string name="tittle_CT">Costo Total</string>

    <!-- Materia Prima-->
    <string name="tittleMP">Materiales</string>
    <string name="material">Nombre</string>
    <string name="quantity">Unidades</string>
    <string name="unitPrice">Precio Unitario</string>
    <string name="totalPrice">Precio Total:</string>
    <string name="calMP">Calcular Materia Prima</string>
    <string name="addMaterial">Añadir Material</string>
    <string name="calTotalPrice">Calcular</string>
    <string name="totalMP">Total Materia Prima:</string>
    
    <!-- Costos indirectos de fabricación-->
    <string name="rent">Arriendos</string>
    <string name="basicServices">Servicios Básicos</string>
    <string name="internet">Internet</string>
    <string name="depreciation">Depreciación de maquinarias y equipos</string>
    <string name="guard">Guardianía</string>
    <string name="secretary">Secretaría</string>
    <string name="calCI">Calcular Costos Indirectos</string>
    <string name="totalCI">Total de los Costos Indirectos de fabricación:</string>

    <!-- global-->
    <string name="total">Total</string>
    <string name="returnHome">Regresar</string>
</resources>
